# roboptim-core-plugin-cmaes

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  README.md
include/roboptim/core/plugin/cmaes/: cmaes.hh  debug.hh  doc.hh
src/: CMakeLists.txt  roboptim-core-plugin-cmaes.cc
src/cma/: boundary_transformation.c
tests/: CMakeLists.txt
tests/cmaes/: example_restarts.c
